   [more efficient; call gl.Feature(treeID, true, true) to render a single
   tree with default state]
 - remove gl.Light, gl.Lighting, gl.Material, gl.ShadeModel
 - remove gl.Fog, gl.FogCoord, gl.SecondaryColor
 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen
 - remove gl.CreateList, gl.CallList, gl.DeleteList
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - move GetConfig* to LuaUnsyncedRead
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
 - remove /DynamicSky command and keybinding
 - remove /{More,Less}Clouds commands
 - remove 3DTrees config-setting
 - remove /adv{map,model}shading commands
 - remove Adv{Map,Unit}Shading config-settings
 - remove ForceDisableShaders config-setting
 - remove Use{V,P}BO config-settings
 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer